
- MonoRail is now CLSCompliant (kudos to Roelof Blom <roelof.blom@gmail.com>)

- Breaking change: now MonoRail requires that you add the following module to web.config:

	<system.web>
		<httpModules>
			<add name="monorail" type="Castle.MonoRail.Framework.EngineContextModule, Castle.MonoRail.Framework" />
		</httpModules>
	</system.web>

- Configuration nodes and attributes changes:
  - mailto to mailTo
  - mailfrom to mailFrom
  - customsession to customSession

- SmartViewComponent removed

- DataBinder refactored out. Now implementation lies on Castle.Components.Binder
  Big performance improvement

- ARDataBinder now issues a FindByPK for nested objects if the keys differs (existing object with 
  form fields)

- SmartDispatcher: now there's no hardcode reference to DataBind, ARDataBind or ARFetch attributes. 
  They only must implement the interface IParameterBinding. This opens an interesting extension point
  for users willing to create their own logic to binding form/querystring parameters to their data components

- Controller: Added RedirectToAction(String action, params String[] queryStringParameters)
  example:  RedirectToAction("edit", "id=" + id, "error=couldn't update the row");

- Added FlashBinderAttribute (being evaluated)

- Added FormHelper (being evaluated)

- Added CaptureFor component

- Renamed ARPager splitted into ARPaginationHelper and ARPager

- ARDataBinder is now able to deal with HasAndBelongsToMany relations. 
  This works in two ways. Suppose you have a Product class with a relation HasAndBelongsToMany to Category.
  
  If you send the following fields from a form:
    
    product.categories.id=1 
    product.categories.id=2
    
  ARDataBinder will ignore the AutoLoad property and always populate the Categories 
  collection on the product class with the result of FindByPrimaryKey of the categories.
  Any other field will be ignored, for example product.categories.name will not be bound
  
  However, if you send the values like