@@ -124,6 +124,11 @@
                     Project = "{98F19522-C9B8-400D-8A12-DABB3DA9411D}"
                     Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
+                <Reference
+                    Name = "NHibernate"
+                    AssemblyName = "NHibernate"
+                    HintPath = "..\..\SharedLibs\nhibernate\NHibernate.dll"
+                />
             </References>
         </Build>
         <Files>
