@@ -38,18 +38,16 @@ namespace TestScaffolding
 			RenderText(person.ToString());
 		}
 
-		public void SavePeople([ARFetch("id", Create=true)] SimplePerson[] people, String[] name, Int32[] age)
+		public void SavePeople([ARFetch("id", Create=true)] SimplePerson[] people)
 		{
 			StringBuilder buffer = new StringBuilder("Length=");
 			buffer.Append(people.Length).Append("\n");
-			int i = 0;
+
 			foreach(SimplePerson person in people)
 			{
-				person.Name = name[i];
-				person.Age = age[i];
-				i++;
 				buffer.Append(person).Append("\n");
 			}
+
 			RenderText(buffer.ToString());
 		}
 	}
